--- a/blog/templates/student/registration.html
+++ b/blog/templates/student/registration.html
@@ -16,7 +16,7 @@
     <a href="/project">Project</a>
     <a href="/events">Events</a>
   <div class="login-container">
-    <form action="/home_registration.html">
+    <form action="/student_registration.html">
       <input type="text" placeholder="Username" name="username">
       <input type="text" placeholder="Password" name="psw">
       <button type="submit">Login</button>
